MilestoneRFAFullSandBox/src/objects/CM_FinalApprovalMailSendingGroupMember__c.object
<CustomObject>
    <description>最終承認メール通知送信グループメンバー</description>
    <fields>
        <fullName>CM_FinalApprovalMailSendingGroup__c</fullName>
        <label>Final approval mail sending group</label>
        <referenceTo>CM_FinalApprovalMailGroup__c</referenceTo>
        <relationshipLabel>Final Approval mail sending group members</relationshipLabel>
        <relationshipName>CM_Group_Member_User_Group1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CM_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CM_Group_Member_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CM_mail__c</fullName>
        <formula>CM_User__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>mail</label>
        <type>Text</type>
    </fields>
    <label>最終承認メール送信グループメンバー</label>
    <nameField>
        <displayFormat>M-{0000000000}</displayFormat>
        <label>No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>